--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
 	<body>
 		<header>
 			<div class="caixa">
-				<h1><img src="/images/logo.png"></h1>
+				<h1><img src="/images/logo.png" alt="Logo da Barbearia Alura"></h1>
 
                 <nav>
 					<ul>
@@ -25,42 +25,70 @@
         <main>
             <form>
                 <label for="nome&sobrenome">Nome e Sobrenome</label>
-                <input type="text" id="nome&sobrenome" class="input-padrao">
+                <input type="text" id="nome&sobrenome" class="input-padrao" required>
 
                 <label for="email">E-mail</label>
-                <input type="email" id="email" class="input-padrao">
+                <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
                 
                 <label for="telefone">Telefone</label>
-                <input type="tel" id="telefone" class="input-padrao">
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="(xx) xxxxx-xxxx">
 
                 <label for="mensagem">Mensagem</label>
                 <textarea cols="30" rows="5" id="mensagem" class="input-padrao"></textarea>
 
-                <div>
-                    <p>Como prefere o nosso contato?</p>
+                <fieldset>
+                    <legend>Como prefere o nosso contato?</legend>
                     <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email">E-mail</label>
                     <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone">Telefone</label>
-                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">WhatsApp</label>                    
-                </div>
+                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>                    
+                </fieldset>
 
-                <div class="contato-horario">
-                    <p>Qual horário prefere ser atendido?</p>
+                <fieldset class="contato-horario">
+                    <legend>Qual horário prefere ser atendido?</legend>
                     <select>
                         <option>Manhã</option>
                         <option>Tarde</option>
                         <option>Noite</option>
                     </select>
-                </div>
+                </fieldset>
 
-                <label class="checkbox"><input type="checkbox">Gostaria de receber nossas novidades por e-mail?</label>
+                <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
 
-                <input type="submit" value="Enviar">
+                <input type="submit" value="Enviar" class="enviar">
             </form>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda-feira</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta-feira</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta-feira</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <td colspan="2">Unidade - Rio de Janeiro</td>
+                    </tr>
+                </tfoot>
+            </table>
 
         </main>
 
         <footer>
-			<img src="/images/logo-branco.png">
+			<img src="/images/logo-branco.png" alt="Logo da Barbearia Alura">
 			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
