--- a/produtos.html
+++ b/produtos.html
@@ -6,6 +6,7 @@
 
 		<link rel="stylesheet" href="/css/reset.css">
 		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manjari:wght@100&display=swap">
 	</head>
 	<body>
 		<header>
