--- a/contato.html
+++ b/contato.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
 		<title>Contato - Barbearia Alura</title>
 
 		<link rel="stylesheet" href="/css/reset.css">
@@ -58,7 +59,7 @@
                 <input type="submit" value="Enviar" class="enviar">
             </form>
 
-            <table>
+            <table class="table-horarios">
                 <thead>
                     <tr>
                         <th>Dia</th>
