--- a/contato.html
+++ b/contato.html
@@ -58,34 +58,36 @@
 
                 <input type="submit" value="Enviar" class="enviar">
             </form>
-
-            <table class="table-horarios">
-                <thead>
-                    <tr>
-                        <th>Dia</th>
-                        <th>Horário</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Segunda-feira</td>
-                        <td>8h ~ 20h</td>
-                    </tr>
-                    <tr>
-                        <td>Quarta-feira</td>
-                        <td>8h ~ 20h</td>
-                    </tr>
-                    <tr>
-                        <td>Sexta-feira</td>
-                        <td>8h ~ 20h</td>
-                    </tr>
-                </tbody>
-                <tfoot>
-                    <tr>
-                        <td colspan="2">Unidade - Rio de Janeiro</td>
-                    </tr>
-                </tfoot>
-            </table>
+            
+            <div class="div-horarios">
+                <table class="table-horarios">
+                    <thead>
+                        <tr>
+                            <th>Dia</th>
+                            <th>Horário</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Segunda-feira</td>
+                            <td>8h ~ 20h</td>
+                        </tr>
+                        <tr>
+                            <td>Quarta-feira</td>
+                            <td>8h ~ 20h</td>
+                        </tr>
+                        <tr>
+                            <td>Sexta-feira</td>
+                            <td>8h ~ 20h</td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">Unidade - Rio de Janeiro</td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
 
         </main>
 
