--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width">
 		<title>Barbearia Alura</title>
-		<link rel="stylesheet" href="/css/reset.css">
-		<link rel="stylesheet" href="/css/style.css">
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Manjari:wght@100&display=swap">
 	</head>
 
@@ -13,7 +13,7 @@
 
 		<header>
 			<div class="caixa">
-				<h1><img src="/images/logo.png" alt="Logo da Barbearia Alura"></h1>
+				<h1><img src="images/logo.png" alt="Logo da Barbearia Alura"></h1>
 
                 <nav>
 					<ul>
@@ -25,11 +25,11 @@
 			</div>
 		</header>
 
-		<img class="banner" src="/images/banner.jpg">
+		<img class="banner" src="images/banner.jpg">
 
 		<section class="principal">
 			<h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
-			<img class="utensilios" src="/images/utensilios.jpg" alt="Utensilios de um barbeiro">
+			<img class="utensilios" src="images/utensilios.jpg" alt="Utensilios de um barbeiro">
 			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
@@ -53,7 +53,7 @@
 					<li class="itens">Profissionais Qualificados</li>
 					<li class="itens">Pontualidade</li>
 					<li class="itens">Limpeza</li>
-				</ul><img src="/images/beneficios.jpg" class="imagem-beneficios">
+				</ul><img src="images/beneficios.jpg" class="imagem-beneficios">
 			</div>
 			<div class="video">
 				<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -61,7 +61,7 @@
 		</section>
 	
 	<footer>
-		<img src="/images/logo-branco.png" alt="Logo da Barbearia Alura">
+		<img src="images/logo-branco.png" alt="Logo da Barbearia Alura">
 		<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 	</footer>
 	
